# pydeepseek-tui

./: .env.example  .gitignore  .gitpr.commit.md  .gitpr.filereview.md  .gitpr.linter.yml  .gitpr.pr.md  .gitpr.review.md  CHANGELOG.md  CLAUDE.md  Makefile  PipFile  Pipfile  README.md  develop_natan_20260518062607_PR_DESC.txt  gitignore  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml
docs/: Comando-make-Oquefaz.csv  analise-projeto.md  comando-make.md  pydeepseek-tui-plano.md
docs/claude-code/: prompts.md  relatorio-implementacao-2026-05-15.md
docs/claude-code/2026-05-15/: analise-lacunas-pydeepseek-tui.md  plano-implementacao-pydeepseek-tui.md
docs/claude-code/reports/: bugfix-confirmation-modal-2026-05-17.md  bugfix-markup-schema-2026-05-16.md  bugfix-onboarding-2026-05-16.md  bugfix-textual-markup-compat-2026-05-16.md  feature-app-debug-2026-05-17.md  feature-session-tracking-2026-05-17.md
docs/claude-code/reports/develop_natan/: bugfix-confirm-modal-2026-05-18.md  bugfix-output-messages-2026-05-18.md
docs/claude-code/reports/main/: bugfix-confirm-modal-2026-05-17.md  session-2026-05-17.md
src/pydeepseek_tui/: __init__.py  app.py
src/pydeepseek_tui/agent/: __init__.py  activity.py  loop.py  session.py  session1.py  workspace.py
src/pydeepseek_tui/cli/: __init__.py  commands.py
src/pydeepseek_tui/config/: crypto.py  debug_logger.py  settings.py
src/pydeepseek_tui/i18n/: __init__.py  translator.py
src/pydeepseek_tui/i18n/locales/: en_US.json  pt_BR.json
src/pydeepseek_tui/providers/: __init__.py  anthropic.py  base.py  deepseek.py  factory.py  ollama.py  openai.py  pricing.py
src/pydeepseek_tui/tools/: __init__.py  base.py  fetch_url.py  file_reader.py  git_tool.py  list_dir.py  read_file.py  registry.py  sandbox.py  search_files.py  shell.py  web_search.py  write_file.py
src/pydeepseek_tui/tui/: app.py
src/pydeepseek_tui/tui/screens/: config.py  main.py
src/pydeepseek_tui/tui/widgets/: __init__.py  chat.py  confirm_screen.py  session_info.py  statusbar.py  thinking.py  tool_panel.py
tests/: test_activity.py  test_agent.py  test_agent_modes.py  test_crypto.py  test_factory.py  test_file_writer.py  test_pricing.py  test_registry.py  test_sandbox.py  test_session.py  test_tools.py  test_translator.py  test_workspace.py
