[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

# ---------------------------------------------------------------------------
# Metadados do pacote
# ---------------------------------------------------------------------------
[project]
name = "pydeepseek-tui"
version = "0.1.0"
description = "Agente de IA com interface TUI no terminal, inspirado no DeepSeek-TUI"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"

authors = [
  { name = "Natan Fiuza", email = "contato@natanfiuza.dev.br" }
]

maintainers = [
  { name = "Natan Fiuza", email = "contato@natanfiuza.dev.br" }
]

keywords = [
  "ai", "agent", "tui", "terminal", "deepseek",
  "llm", "coding-agent", "cli", "textual"
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Terminals",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Dependências espelham o Pipfile [packages]
dependencies = [
  "textual>=0.82.0",
  "openai>=1.82.0",
  "anthropic>=0.49.0",
  "httpx>=0.28.0",
  "cryptography>=44.0.0",
  "click>=8.1.0",
  "python-dotenv>=1.1.0",
  "beautifulsoup4>=4.13.0",
  "lxml>=5.3.0",
  "duckduckgo-search>=8.0.0",
  "gitpython>=3.1.0",
  "rich>=14.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=6.1.0",
  "pytest-asyncio>=0.26.0",
  "pytest-recording>=0.13.0",
  "ruff>=0.11.0",
  "black>=25.1.0",
  "mypy>=1.15.0",
  "types-beautifulsoup4",
  "types-requests",
  "build>=1.2.0",
  "twine>=6.1.0",
]

# ---------------------------------------------------------------------------
# Entry points — comandos disponíveis após instalação
# ---------------------------------------------------------------------------
[project.scripts]
pydeepseek-tui = "pydeepseek_tui.cli.commands:cli"

# ---------------------------------------------------------------------------
# URLs do projeto
# ---------------------------------------------------------------------------
[project.urls]
Homepage       = "https://github.com/natanfiuza/pydeepseek-tui"
Repository     = "https://github.com/natanfiuza/pydeepseek-tui"
Documentation  = "https://github.com/natanfiuza/pydeepseek-tui#readme"
"Bug Tracker"  = "https://github.com/natanfiuza/pydeepseek-tui/issues"
Changelog      = "https://github.com/natanfiuza/pydeepseek-tui/blob/main/CHANGELOG.md"

# ---------------------------------------------------------------------------
# Descoberta de pacotes (src layout)
# ---------------------------------------------------------------------------
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pydeepseek_tui" = [
  "i18n/locales/*.json",
  "tui/styles/*.tcss",
]

# ---------------------------------------------------------------------------
# Ruff — linter
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "UP",   # pyupgrade
  "N",    # pep8-naming
  "ANN",  # flake8-annotations (type hints)
  "S",    # flake8-bandit (security)
  "T20",  # flake8-print
  "RUF",  # ruff-specific
]
ignore = [
  "ANN101",  # missing type annotation for self
  "ANN102",  # missing type annotation for cls
  "S603",    # subprocess calls (necessário para shell tool)
  "S607",    # partial path for process (necessário para shell tool)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "ANN", "T20"]

# ---------------------------------------------------------------------------
# Black — formatador
# ---------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313"]
include = '\.pyi?$'

# ---------------------------------------------------------------------------
# Mypy — type checker
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
files = ["src/"]

[[tool.mypy.overrides]]
module = [
  "duckduckgo_search.*",
  "git.*",
  "bs4.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
  "-v",
  "--tb=short",
]
markers = [
  "unit: testes unitários rápidos",
  "integration: testes de integração (requerem rede ou filesystem)",
  "slow: testes lentos",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["src/pydeepseek_tui"]
omit = [
  "*/tests/*",
  "*/__init__.py",
  "*/main.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "@abstractmethod",
]
